--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,8 +36,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./CloudNativeHackathonExpressApp/Dockerfile
+          context: ./CloudNativeHackathonExpressApp
+          file: ./Dockerfile
           platforms: linux/amd64
           push: true
           tags: adhirkirtikar/cloudnativehackathonexpressapp:${{ secrets.MAJOR }}.${{ secrets.MINOR }}
