--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,13 +35,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Show Major & Minor Version
+        shell: bash
+        env:
+          MAJ: $((${{ secrets.MAJOR }}))
+          MIN: $((${{ secrets.MINOR }}+1))
+        run: |
+          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN"
+      -
         name: Build and push versioned tag
         uses: docker/build-push-action@v2
         with:
           context: ./CloudNativeHackathonExpressApp
           platforms: linux/amd64
           push: true
-          tags: adhirkirtikar/cloudnativehackathonexpressapp:${{ secrets.MAJOR }}.${{ secrets.MINOR }}
+          tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN
       -
         name: Build and push latest tag
         uses: docker/build-push-action@v2
@@ -55,14 +63,6 @@ jobs:
         uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: 'MINOR'
-          value: $((${{ secrets.MINOR }}+1))
+          value: $(($MIN))
           repository: AdhirKirtikar/CloudNativeHackathonExpressApp
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}          
-      -
-        name: Show Major & Minor Version
-        shell: bash
-        env:
-          MAJ: $((${{ secrets.MAJOR }}+1))
-          MIN: $((${{ secrets.MINOR }}+1))
-        run: |
-          echo "$MAJ" "$MIN"
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}      
