--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,10 +38,10 @@ jobs:
         name: Show Major & Minor Version
         shell: bash
         env:
-          MAJ: $((${{ secrets.MAJOR }}))
-          MIN: $((${{ secrets.MINOR }}+1))
+          MAJ: ${{ secrets.MAJOR }}
+          MIN: ${{ secrets.MINOR }}
         run: |
-          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN"
+          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))"
       -
         name: Build and push versioned tag
         uses: docker/build-push-action@v2
@@ -49,7 +49,7 @@ jobs:
           context: ./CloudNativeHackathonExpressApp
           platforms: linux/amd64
           push: true
-          tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN
+          tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))
       -
         name: Build and push latest tag
         uses: docker/build-push-action@v2
