--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,42 +22,42 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # -
+      #   name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
+      # -
+      #   name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+      # -
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v1 
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Show Major & Minor Version
         shell: bash
         env:
-          MAJ: ${{ secrets.MAJOR }}
-          MIN: ${{ secrets.MINOR }}
+          MAJ: $((${{ secrets.MAJOR }}))
+          MIN: $((${{ secrets.MINOR }}+1))
         run: |
-          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))"
-      -
-        name: Build and push versioned tag
-        uses: docker/build-push-action@v2
-        with:
-          context: ./CloudNativeHackathonExpressApp
-          platforms: linux/amd64
-          push: true
-          tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))
-      -
-        name: Build and push latest tag
-        uses: docker/build-push-action@v2
-        with:
-          context: ./CloudNativeHackathonExpressApp
-          platforms: linux/amd64
-          push: true
-          tags: adhirkirtikar/cloudnativehackathonexpressapp:latest         
+          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN"
+      # -
+      #   name: Build and push versioned tag
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./CloudNativeHackathonExpressApp
+      #     platforms: linux/amd64
+      #     push: true
+      #     tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))
+      # -
+      #   name: Build and push latest tag
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./CloudNativeHackathonExpressApp
+      #     platforms: linux/amd64
+      #     push: true
+      #     tags: adhirkirtikar/cloudnativehackathonexpressapp:latest         
       -
         name: Update Minor version
         uses: hmanzur/actions-set-secret@v2.0.0
