--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,47 +22,44 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-      # -
-      #   name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
-      # -
-      #   name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-      # -
-      #   name: Login to DockerHub
-      #   uses: docker/login-action@v1 
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Show Major & Minor Version
-        shell: bash
-        env:
-          MAJ: $((${{ secrets.MAJOR }}))
-          MIN: $((${{ secrets.MINOR }}+1))
+        name: Set Environment Variables
         run: |
-          echo "adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$MIN"
-      # -
-      #   name: Build and push versioned tag
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./CloudNativeHackathonExpressApp
-      #     platforms: linux/amd64
-      #     push: true
-      #     tags: adhirkirtikar/cloudnativehackathonexpressapp:$MAJ.$(($MIN+1))
-      # -
-      #   name: Build and push latest tag
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./CloudNativeHackathonExpressApp
-      #     platforms: linux/amd64
-      #     push: true
-      #     tags: adhirkirtikar/cloudnativehackathonexpressapp:latest         
+          IMG=cloudnativehackathonexpressapp
+          OWNER="$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')"
+          echo "BUILD_VER=0.$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+          echo "IMG=${IMG}" >> $GITHUB_ENV
+          echo "IMAGE=${OWNER}/${IMG}" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+          echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
+          echo "GIT_REF=$(git symbolic-ref -q --short HEAD || git describe --tags --exact-match)" >> $GITHUB_ENV        
       -
-        name: Update Minor version
-        uses: hmanzur/actions-set-secret@v2.0.0
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          name: 'MINOR'
-          value: $(($MIN))
-          repository: AdhirKirtikar/CloudNativeHackathonExpressApp
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}      
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push latest tag
+        uses: docker/build-push-action@v2
+        with:
+          context: ./CloudNativeHackathonExpressApp
+          platforms: linux/amd64
+          push: true
+          labels: |
+            org.opencontainers.image.authors=${{ github.repository_owner }}
+            org.opencontainers.image.created=${{ env.BUILD_DATE }}
+            org.opencontainers.image.description=Created from commit ${{ env.GIT_SHA }} and ref ${{ env.GIT_REF }}
+            org.opencontainers.image.ref.name=${{ env.GIT_REF }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.version=${{ env.BUILD_VER }}
+          tags: |
+            ${{ env.IMAGE }}:latest
+            ${{ env.IMAGE }}:${{ env.BUILD_VER }}          
